tests/ui/derive_index_too_big_error_non_empty.stderr
error: only empty structs are supported (e.g `struct Foo;`)
 --> tests/ui/derive_index_too_big_error_non_empty.rs:3:10
  |
3 | #[derive(IndexTooBigError)]
  |          ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `IndexTooBigError` (in Nightly builds, run with -Z macro-backtrace for more info)
