tests/ui/derive_index_too_big_error_non_empty.rs
use index_type::IndexTooBigError;

#[derive(IndexTooBigError)]
#[index_too_big_error(msg = "bad")]
struct BadError(u8);

fn main() {}
